# kos

./: .gdb_history  .gitignore  .log.txt  Cargo.toml  Makefile  README.md  back.py  build.rs  kos  makefile  remake.sh  res.txt
.cargo/: config
component/: Cargo.toml
component/src/: lib.rs
component/src/chardev/: mod.rs
component/src/crt0/: builder.rs  entry.rs  mod.rs  reader.rs
component/src/device_tree/: mod.rs  util.rs
component/src/fs/: block_device.rs  mod.rs
component/src/fs/ext2/: address.rs  allocator.rs  blockgroup.rs  dir.rs  disk_inode.rs  filesystem.rs  inode.rs  layout.rs  metadata.rs  mod.rs  superblock.rs  symlink.rs
component/src/fs/vfs/: dir.rs  error.rs  filesystem.rs  inode.rs  meta.rs  mod.rs  path.rs
component/src/gpu/: gpu_device.rs  mod.rs
component/src/io/: mod.rs
component/src/memory/: mod.rs
component/src/memory/bitmap/: mod.rs
component/src/memory/buddy/: mod.rs  test.rs
component/src/memory/slab/: builder.rs  mod.rs
component/src/net/: mod.rs  net_device.rs
component/src/process/: fifo.rs  mod.rs
component/src/util/: cast.rs  ceil.rs  human_size.rs  mem.rs  mod.rs  str.rs  time.rs
kernel/: banner  clock.rs  console.rs  init.rs  lang_items.rs  lib.rs  link_app.S  linker.ld  loader.rs  logger.rs  main.rs  sbi.rs  timer.rs
kernel/driver/: mod.rs
kernel/driver/block/: mod.rs  virtio_blk.rs
kernel/driver/bus/: mod.rs  virtio.rs
kernel/driver/chardev/: mod.rs  ns16550a.rs
kernel/driver/gpu/: mod.rs
kernel/driver/input/: mod.rs
kernel/driver/net/: mod.rs  virtio_net.rs
kernel/fs/: inode.rs  mod.rs  pipe.rs  stdio.rs  userbuf.rs
kernel/gpu/: mod.rs
kernel/io/: mod.rs
kernel/memory/: address.rs  address_space.rs  frame.rs  heap_alloc.rs  kernel_view.rs  mod.rs  page_table.rs  segment.rs
kernel/net/: mod.rs
kernel/process/: fdtable.rs  kstack.rs  mod.rs  pid.rs  processor.rs  scheduler.rs  signal.rs  stack.rs
kernel/sync/: condvar.rs  mod.rs  unicore.rs  up.rs
kernel/syscall/: fs.rs  gui.rs  input.rs  mod.rs  process.rs  signal.rs  thread.rs
kernel/task/: context.rs  mod.rs  stack.rs  switch.rs  uresource.rs
kernel/trap/: context.rs  mod.rs  plic.rs  trap.S
kernel/util/: mod.rs
logger/: Cargo.toml
logger/src/: lib.rs
qemu_config/: Cargo.toml
qemu_config/src/: lib.rs
src/: batch.rs  config.rs  console.rs  entry.asm  init.rs  lib.rs  link_app.S  linker.ld  loader.rs  main.rs  sbi.rs  unicore.rs
src/syscall/: fs.rs  mod.rs  process.rs
src/task/: context.rs  mod.rs  stack.rs  switch.S
src/trap/: context.rs  mod.rs  trap.S
sys_interface/: Cargo.toml
sys_interface/src/: config.rs  lib.rs  syscall.rs  syserr.rs  sysfs.rs  syssig.rs
user/: Cargo.toml  build.py  makefile
user/.cargo/: config
user/kernel/: linker.ld
user/prog/: cat  cor  corl  coroutine  cp  echo  exit  file  forkexec  forktest  forktest2  forktest_simple  forktree  fw  fwrite  hello  init  ls  matrix  mem  mkdir  mv  perc  pipe_large  pipetest  priv_inst  pwd  read  rm  rw  sbrk  shell  sig1  sleep  sleep_simple  snake  stack_deep  stack_overflow  tc  text  (+10 more)
user/src/: cat.rs  cor.rs  cp.rs  echo.rs  exit.rs  file.rs  forkexec.rs  forktest.rs  forktest2.rs  forktest_simple.rs  forktree.rs  fw.rs  fwrite.rs  hello.rs  init.rs  linker.ld  ls.rs  matrix.rs  mem.rs  mkdir.rs  mv.rs  perc.rs  pipe_large.rs  pipetest.rs  priv_inst.rs  pwd.rs  read.rs  rm.rs  rw.rs  sbrk.rs  sig1.rs  sleep.rs  sleep_simple.rs  snake.rs  stack_deep.rs  stack_overflow.rs  tc.rs  text.rs  thread.rs  thread2.rs  (+8 more)
user/src/shell/: cmd.rs  mod.rs  parser.rs  utils.rs
user_lib/: Cargo.toml
user_lib/src/: console.rs  constant.rs  env.rs  fs.rs  gui.rs  io.rs  lang_items.rs  lib.rs  linker.ld  logger.rs  start.rs  syscall.rs
