[package]
name = "kos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
component = {path = "./component"}
logger = {path = "./logger", features = ["kernel"]}
qemu_config = {path = "./qemu_config"}
sys_interface = {path = "./sys_interface"}
riscv = { version = "0.10.1" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
hashbrown = "0.13.2"


[profile.release]
debug = true
opt-level = 0

[lib]
name = "kos"
path = "kernel/lib.rs"

[[bin]]
name = "kos"
path = "kernel/main.rs"
