[package]
name = "kos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
# members = ['component', 'qemu_config', 'logger', 'sys_interface']
exclude = ['user', 'user_lib']

[dependencies]
# 内部依赖
component = { path = "./component" }
logger = { path = "./logger", features = ["kernel"] }
qemu_config = { path = "./qemu_config" }
sys_interface = { path = "./sys_interface" }
# 外部依赖
riscv = { version = "0.10.1" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
hashbrown = "0.13.2"
bitflags = "2.0.2"
xmas-elf = "0.9.0" # zero alloc 相对较快
spin = "0.9.8"
embedded-graphics = "0.8.0"
oorandom = "11.1.3"
volatile = "0.4.6"
tinybmp = "0.5.0"
virtio-drivers = "0.5.0"
no-std-net = "0.6.0"
executor = "0.8.4"
itertools = { version = "0.10.5", default-features = false, features = [
   "use_alloc",
] }


[profile.release]
opt-level = 0
lto = "fat"


[lib]
name = "kos"
path = "kernel/lib.rs"

[[bin]]
name = "kos"
path = "kernel/main.rs"
