[package]
name = "logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# this crate is specific for kernel, user mode should not use this logger

[dependencies]
riscv = { version = "0.10.1" }
qemu_config = { path = "../qemu_config"}
spin = "0.9.6"

[features]
kernel = []
user = []