[package]
name = "user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
user_lib = { path = "../user_lib"}
backtrace = { version = "0.3", default-features = false }

[profile.release]
debug = true



# -----------------------------------------
[[bin]]
name = "write_a"
path = "src/write_a.rs"

[[bin]]
name = "write_b"
path = "src/write_b.rs"

[[bin]]
name = "write_c"
path = "src/write_c.rs"

[[bin]]
name = "stack_deep"
path = "src/stack_deep.rs"

[[bin]]
name = "sbrk"
path = "src/sbrk.rs"