[package]
name = "user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
user_lib = { path = "../user_lib" }

[profile.release]
opt-level = 1
lto = "fat"


# -----------------------------------------
[[bin]]
name = "init"
path = "src/init.rs"

[[bin]]
name = "shell"
path = "src/shell/mod.rs"

[[bin]]
name = "fw"
path = "src/fw.rs"

[[bin]]
name = "rw"
path = "src/rw.rs"

[[bin]]
name = "tc"
path = "src/tc.rs"

[[bin]]
name = "ls"
path = "src/ls.rs"

[[bin]]
name = "cat"
path = "src/cat.rs"

[[bin]]
name = "touch"
path = "src/touch.rs"

[[bin]]
name = "echo"
path = "src/echo.rs"

[[bin]]
name = "mkdir"
path = "src/mkdir.rs"

[[bin]]
name = "rm"
path = "src/rm.rs"

[[bin]]
name = "pwd"
path = "src/pwd.rs"

[[bin]]
name = "mv"
path = "src/mv.rs"

[[bin]]
name = "hello"
path = "src/hello.rs"

[[bin]]
name = "cp"
path = "src/cp.rs"

[[bin]]
name = "pipetest"
path = "src/pipetest.rs"

[[bin]]
name = "pipe_large"
path = "src/pipe_large.rs"

# [[bin]]
# name = "exit"
# path = "src/exit.rs"

# [[bin]]
# name = "forkexec"
# path = "src/forkexec.rs"

# [[bin]]
# name = "text"
# path = "src/text.rs"

# [[bin]]
# name = "forktest_simple"
# path = "src/forktest_simple.rs"

# [[bin]]
# name = "forktest2"
# path = "src/forktest2.rs"

# [[bin]]
# name = "matrix"
# path = "src/matrix.rs"

# [[bin]]
# name = "forktree"
# path = "src/forktree.rs"

# [[bin]]
# name = "sleep"
# path = "src/sleep.rs"

# [[bin]]
# name = "sleep_simple"
# path = "src/sleep_simple.rs"

# [[bin]]
# name = "forktest"
# path = "src/forktest.rs"

# [[bin]]
# name = "stack_overflow"
# path = "src/stack_overflow.rs"

[[bin]]
name = "yield"
path = "src/yield.rs"

[[bin]]
name = "read"
path = "src/read.rs"

# [[bin]]
# name = "usertests-simple"
# path = "src/usertests-simple.rs"

# [[bin]]
# name = "usertests"
# path = "src/usertests.rs"
