[package]
name = "user_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sys_interface = { path = "../sys_interface" }
# features 选择 user 模式
logger = { path = "../logger", features = ["user"] }
component = { path = "../component" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
bitflags = "2.0.2"

# 外部依赖
spin = "0.9.6"

[profile.release]
debug = true
opt-level = 0
