[package]
name = "user_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sys_interface = { path = "../sys_interface" }
# features 选择 user 模式
logger = { path = "../logger", default-features = false, features = ["user"] }
# 需要用到 crt0 和 heap
component = { path = "../component", default-features = false, features = [
    "user_log",
] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
bitflags = "2.0.2"
embedded-graphics = "0.7.1"

# 外部依赖
spin = "0.9.6"
shell-words = { version = "1.0.0", default-features = false }

[profile.release]
opt-level = 2
lto = "fat"
